Login front e back

--- a/back/.env.example
+++ b/back/.env.example
@@ -1,3 +1,4 @@
 # NÂO COLOCAR INFORMAÇÕES SENSIVEIS AQUI PRFVR
 PORT=5151
 DATABASE_URL="mysql://USUARIO:SENHA@localhost:3306/NOME_BANCO"
+JWT_KEY="
